# cpp_serializers

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp  readme.md  serializer.cpp  serializer.h  serializer.hpp  struct.cpp  struct.h  struct.hpp
avro/: avro_serializer.cpp  avro_serializer.hpp
boost_json/: boost_json.cpp  boost_json.hpp
boost_serialization/: boost_serializer.cpp  boost_serializer.hpp  serialize.cpp  serialize.h
datafiles/: sample.txt
message_pack/: msgpack_serializer.cpp
protobuf/: data_struct.proto  protobuf_serializer.cpp
scripts/: docker-build.sh  docker-run.sh
util/: check_pb_output.cpp  profiler.cpp  randomizer.cpp  util.hpp
yaml/: yaml_serializer.cpp  yaml_serializer.hpp
